turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:9: error: not found: value colors
  for (i <- 0 to colors.length - 1) {
                 ^LangtonsAnt:10: error: not found: value colors
    if (colors(i) == couleur) {
        ^LangtonsAnt:11: error: not found: value colors
      setCouleurSol(colors(i+1))
                    ^LangtonsAnt:12: error: not found: value rule
      if (rule(i) = 'R') {
          ^